Refactor footer layout and update translations; add Privacy Policy, Terms & Conditions, and Legal Notice

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -24,5 +24,8 @@
   "Name": "Naam",
   "Your Name": "Jouw naam",
   "Email": "E-mail",
-  "Your Email": "Jouw e-mail"
+  "Your Email": "Jouw e-mail",
+  "Privacy Policy": "Privacybeleid",
+  "Terms & Conditions": "Algemene voorwaarden",
+  "Legal Notice": "Juridische kennisgeving"
 }
