--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -24,5 +24,8 @@
   "Name" : "Name",
   "Your Name": "Your Name",
   "Email" : "Email",
-  "Your Email": "Your Email"
+  "Your Email": "Your Email",
+  "Privacy Policy": "Privacy Policy",
+  "Terms & Conditions": "Terms & Conditions",
+  "Legal Notice": "Legal Notice"
 }
