feat: Add IrenePlans component with pricing plans and WhatsApp integration
- Implemented IrenePlans component to display various subscription plans.
- Added styled components for plan layout and design.
- Created JSON content files for Irene's introduction, middle block, and about sections.
- Updated translation files for English and Dutch languages.
- Added Legal Notice and Terms & Conditions pages with relevant content.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -28,6 +28,50 @@
   "Privacy Policy": "Privacy Policy",
   "Terms & Conditions": "Terms & Conditions",
   "Legal Notice": "Legal Notice",
+  "Flagship": "Flagship",
+  "Talk to Irene": "Talk to Irene",
+  "Read More": "Read More",
+  "Hire Irene": "Pricing Plans",
+  "IreneIntroTitle": "Ik ben Irene",
+  "IreneIntroText": "I'm your ADHD-friendly digital coach. I turn scattered to-do lists into structured rituals, keep score of your momentum, and check in with warmth instead of pressure.",
+  "IreneMiddleTitle": "Structure that feels personal",
+  "IreneMiddleContent": "Treat your day like a playlist: plan, act, reflect, repeat. Irene pairs conversational planning with adaptive reminders so momentum always feels attainable.",
+  "IreneMiddleButton": "Subscription Plans",
+  "IreneAboutTitle": "Built for scrolling brains",
+  "IreneAboutText": "I fuse dopamine-friendly interfaces with strategic thinking so you can enjoy the ride while still shipping meaningful work.",
+  "IreneSocialTitle": "Social media energy",
+  "IreneSocialContent": "Swipe through your wins, drafts, and rituals as if you were scrolling a feed. Irene keeps links, notes, and energy levels neatly stacked for quick reflection.",
+  "IreneChessTitle": "Chess-grade decisions",
+  "IreneChessContent": "When you're stuck, I surface the next best activity the way a chess engine highlights moves—clear options without judgement.",
+  "HireIreneTitle": "Hire Irene",
+  "HireIreneSubtitle": "First two weeks of every plan are free. Cancel anytime.",
+  "IreneContactTitle": "Need something different?",
+  "IreneContactContent": "If your use case isn't listed or you need a bespoke integration, send a message and we'll tailor Irene to your workflow.",
+  "IrenePlans": {
+    "StarterName": "Starter Plan",
+    "StarterShift": "8 AM – 4 PM",
+    "StarterPrice": "€24 per month",
+    "StarterBulletOne": "10 min call every day.",
+    "StarterBulletTwo": "200 WhatsApp replies included.",
+    "StarterBulletThree": "Roleplay mode: Boss, Mother, Partner.",
+    "StarterBulletFour": "Adaptive scheduling that flexes with your day.",
+    "AdvancedBadge": "Best Deal",
+    "AdvancedName": "Advanced Plan",
+    "AdvancedShift": "8 AM – 10 PM",
+    "AdvancedPrice": "€54 per month",
+    "AdvancedBulletOne": "Everything in Starter, plus:",
+    "AdvancedBulletTwo": "1 hour daily call.",
+    "AdvancedBulletThree": "Unlimited replies.",
+    "AdvancedBulletFour": "Live activity feed.",
+    "EliteName": "Elite Plan",
+    "EliteShift": "24/7 on-demand",
+    "ElitePrice": "€99 per month",
+    "EliteBulletOne": "Everything in Advanced, plus:",
+    "EliteBulletTwo": "Unlimited calls.",
+    "EliteBulletThree": "Behavioral change interventions.",
+    "Button": "Request via WhatsApp",
+    "MessageTemplate": "Hello, I want the {{plan}} subscription plan."
+  },
   "legal": {
     "privacy": {
       "title": "Privacy Policy",
