--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -28,6 +28,50 @@
   "Privacy Policy": "Privacybeleid",
   "Terms & Conditions": "Algemene voorwaarden",
   "Legal Notice": "Juridische kennisgeving",
+  "Flagship": "Vlaggenschip",
+  "Talk to Irene": "Praat met Irene",
+  "Read More": "Lees meer",
+  "Hire Irene": "Prijsplannen",
+  "IreneIntroTitle": "Ik ben Irene",
+  "IreneIntroText": "Ik ben je ADHD-vriendelijke digitale coach. Ik geef rommelige to-do's ritme, houd je voortgang bij en check in met warmte in plaats van druk.",
+  "IreneMiddleTitle": "Structuur die persoonlijk voelt",
+  "IreneMiddleContent": "Behandel je dag als een afspeellijst: plannen, doen, reflecteren, herhalen. Irene koppelt gesprekken aan slimme herinneringen zodat momentum haalbaar blijft.",
+  "IreneMiddleButton": "Bekijk de abonnementen",
+  "IreneAboutTitle": "Gemaakt voor breinen die scrollen",
+  "IreneAboutText": "Ik mix dopaminevriendelijke interfaces met strategische keuzes zodat je plezier houdt én resultaat levert.",
+  "IreneSocialTitle": "Sociale-feed energie",
+  "IreneSocialContent": "Swipe door je successen, concepten en rituelen alsof je door een feed bladert. Irene bewaart links, notities en energiepeil overzichtelijk.",
+  "IreneChessTitle": "Beslissen als een schaakengine",
+  "IreneChessContent": "Zit je vast? Ik stel de volgende beste actie voor zoals een schaakengine zetten toont—heldere opties zonder oordeel.",
+  "HireIreneTitle": "Huur Irene in",
+  "HireIreneSubtitle": "De eerste twee weken van elk plan zijn gratis. Opzeggen kan altijd.",
+  "IreneContactTitle": "Staat jouw scenario er niet bij?",
+  "IreneContactContent": "Laat weten welke workflow of integratie je zoekt en we stemmen Irene af op jouw context.",
+  "IrenePlans": {
+    "StarterName": "Starter-plan",
+    "StarterShift": "8 AM – 4 PM",
+    "StarterPrice": "€24 per maand",
+    "StarterBulletOne": "Dagelijks een call van 10 minuten.",
+    "StarterBulletTwo": "200 WhatsApp-antwoorden inbegrepen.",
+    "StarterBulletThree": "Roleplay-modus: baas, moeder, partner.",
+    "StarterBulletFour": "Adaptieve planning die meebeweegt.",
+    "AdvancedBadge": "Beste deal",
+    "AdvancedName": "Advanced-plan",
+    "AdvancedShift": "8 AM – 10 PM",
+    "AdvancedPrice": "€54 per maand",
+    "AdvancedBulletOne": "Alles uit Starter, plus:",
+    "AdvancedBulletTwo": "Dagelijks 1 uur bellen.",
+    "AdvancedBulletThree": "Onbeperkte replies.",
+    "AdvancedBulletFour": "Live activity feed.",
+    "EliteName": "Elite-plan",
+    "EliteShift": "24/7 on-demand",
+    "ElitePrice": "€99 per maand",
+    "EliteBulletOne": "Alles uit Advanced, plus:",
+    "EliteBulletTwo": "Onbeperkte calls.",
+    "EliteBulletThree": "Gedragsveranderende interventies.",
+    "Button": "Vraag aan via WhatsApp",
+    "MessageTemplate": "Hallo, ik wil het {{plan}}-abonnement."
+  },
   "legal": {
     "privacy": {
       "title": "Privacybeleid",
