fix: Update IreneIntroTitle to include emoji in English and Dutch translations

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -32,7 +32,7 @@
   "Talk to Irene": "Praat met Irene",
   "Read More": "Lees meer",
   "Hire Irene": "Prijsplannen",
-  "IreneIntroTitle": "Ik ben Irene",
+  "IreneIntroTitle": "Ik ben Irene 🌱",
   "IreneIntroText": "Ik ben je ADHD-vriendelijke digitale coach. Ik geef rommelige to-do's ritme, houd je voortgang bij en check in met warmte in plaats van druk.",
   "IreneMiddleTitle": "Structuur die persoonlijk voelt",
   "IreneMiddleContent": "Behandel je dag als een afspeellijst: plannen, doen, reflecteren, herhalen. Irene koppelt gesprekken aan slimme herinneringen zodat momentum haalbaar blijft.",
