--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -32,7 +32,7 @@
   "Talk to Irene": "Talk to Irene",
   "Read More": "Read More",
   "Hire Irene": "Pricing Plans",
-  "IreneIntroTitle": "Ik ben Irene",
+  "IreneIntroTitle": "Ik ben Irene 🌱",
   "IreneIntroText": "I'm your ADHD-friendly digital coach. I turn scattered to-do lists into structured rituals, keep score of your momentum, and check in with warmth instead of pressure.",
   "IreneMiddleTitle": "Structure that feels personal",
   "IreneMiddleContent": "Treat your day like a playlist: plan, act, reflect, repeat. Irene pairs conversational planning with adaptive reminders so momentum always feels attainable.",
